# control_theory_assignment

./: .gitignore  LICENCE  README.md  bode-plot.py  nyquist-plot.py  pyproject.toml  root-determine.py  root-locus-oneloop.py  root-locus-twoloop.py  root-locus.py  root_locus_plot.py  rtool.ipynb  vis_rlocus.ipynb
MATLAB/rootlocus/: PlotRootLocus.m  control_sys.m  l.m
