[tool.poetry]
name = "control-theory-assignment"
version = "0.1.0"
description = "assignment code for control_theory"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
control = "^0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
