[tool.poetry]
name = "control-theory-assignment"
version = "0.1.0"
description = "assignment code for control_theory"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
control = "^0.10.1"
ipynb = "^0.5.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
